--- a/index.html
+++ b/index.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Beach Paradise</title>
+  <title>Excursion</title>
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
 </head>
-<body>
-	<h1>Beach Paradise</h1>
+<body width="100%" height="100%">
+	<h1>Discover hidden places in the world around you</h1>
 
-	<h2>The Top Beach Destinations in the World</h2>
-	<div class="beaches">
-		<ol>
-		  <li><a href="#hahia">Bay of Bahia</a></li>
-	      <li><a href="#selange">Selange Beach</a></li>
-	      <li><a href="#hunt">Hunt Lagoon</a></li>
-	      <li><a href="#moat">Moat Lagoon</a></li>
-		</ol>
+	<h6>Download Excurions Coming Soon</h6>
+	
+	<div class="video_cellphone">
+	 	<video autoplay>
+  		<source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+		</video> 
+	
 	</div>
 
-	<div id="bahia">
-		<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/bahia.jpeg" alt="Bay of Bahia" />
-		<h3>Bay of Bahia</h3>
+	<div>
+	<h2>Your personal travel guide</h2>
+	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
 
-		<p>Nestled on the northern end of the Isle of Caludge, this beach is cited as the most popular getaway for vacationers during peak summer months. Popular activities include scuba diving, snorkeling, and bird watching.</p>
+		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="Camp" />
+		<h3></h3>
 	</div>
 	
-	<div id="selange">
-		<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/selange.jpeg" alt="Selange Beachb" />
-		<h3>Selange Beach</h3>
+	<div id="Little-cellphone">
+		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="Little Cellphone" />
+	
+		<h2>Coming Soon for iPhone and Android</h2>
 
-		<p>Selange Beach is known for its temperate sand. Made up of ground coral due to thousands of years of tectonic activity, the sand is always cool to the touch, despite the heat. The western portion includes fantastic flora and fauna and many pre-Columbian ruins.</p>
+		<h6>Download Excurions Coming Soon</h6>
 	</div>
 
-	<div id="hunt">
-		<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hunt.jpeg" alt="Hunt Lagoon" />
-		<h3>Hunt Lagoon</h3>
-
-		<p>Known primarily for it's hidden location on Kamar Island (which includes swimming through an underground cave), Hunt Lagoon offers a peaceful respite from the tourist-laden locations found throughout Kamar. If possible, make a visit at night – it's bioluminescent lagoon is like viewing fireworks in the water!</p>
+	<div id="disclaimer">
+		<p>&copy; Excursion</p>
 	</div>
 
-	<div id="moat">
-		<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/selange.jpeg" alt="Moat Lagoon" />
-		<h3>Moat Lagoon</h3>
-
-		<p>Last, but certainly not least, is Moat Lagoon. This is one of the most difficult beach locations to access. The lagoon is located inside of a prehistoric cenote, or underground aquifer. Accessing it involves crossing the moat surrounding the lagoon (hence the name) with locals by kayak. Once there, marvel at the phenomenal (and endangered) quetzal bird and its golden feathers.</p>
-	</div>
 </body>
 </html>
 
